# ray_tracer

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: camera.rs  hit.rs  lib.rs  material.rs  ray.rs  scene.rs  sphere.rs  vec.rs
src/: camera.rs  hit.rs  main.rs  material.rs  ray.rs  sphere.rs  vec.rs  vec3.rs
