[package]
version = "0.1.0"
name = "frontend"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "a6f5070" }
rand = { version = "0.8.3", features = ["small_rng", "getrandom", "std", "std_rng"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }

[dependencies.web-sys]
version = "0.3.51"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

